--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
       <meta charset="utf-8">
-      <title> Welcome to My Webpage | Test </title>
+      <title> CULS Final Project for Front end - 2018</title>
       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
       <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
@@ -11,16 +11,15 @@
   <body>
     <!--Welcome Banner -->
     <header role="banner" class="welcome-content">
-      <h1> Welcome to My Webpage </h1>
+      <h1> Welcome to our Webpage </h1>
     </header>
 
     <main role="main" id="multi_col">
       <nav role="navigation">
          <ul>
            <li>Home</li>
-           <li>Blogs</li>
-           <li>Videos</li>
-           <li>About Me</li>
+           <li>About us</li>
+           <li>Contact us</li>
          </ul>
       </nav>
 
@@ -48,7 +47,7 @@
     </<main>
 
     <footer>
-      <p>Copyright @ TCS 2016</p>
+      <p>All Rights reserved @CULS 2018</p>
     </footer>
   </body>
 </html>
