--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!-- Beans, DAOs, Servlet, and one more thing?-->
 <!doctype html>
-<html>
+
+
   <head>
       <meta charset="utf-8">
       <title> CULS Final Project for Front end - 2018</title>
@@ -11,43 +12,28 @@
   <body>
     <!--Welcome Banner -->
     <header role="banner" class="welcome-content">
-      <h1> Welcome to our Webpage </h1>
-    </header>
+      <h1> Welcome to the Final Project for Frontend </h1>
 
-    <main role="main" id="multi_col">
-      <nav role="navigation">
-         <ul>
-           <li>Home</li>
-           <li>About us</li>
-           <li>Contact us</li>
-         </ul>
-      </nav>
 
-      <section class="registration">
-        <form action="/script.java" method="get">
-          Name:              <input type="text" name="name"><br>
-          Date of Birth:     <input type="date" name="birthdate"><br>
-          <!-- Country needs to be a keygen or datalist -->
-          <!-- Country:           <input type="text" name="country"> -->
-          Countries: <input list="countries" name="country">
-          <datalist id="countries">
-            <option value="United States">
-            <option value="India">
-            <option value="United Kingdom">
-            <option value="Australia">
-            <option value="France">
-          </datalist><br>
+  <div class="navigation">
 
-          Phone Number:      <input type="tel" name="phone_number"><br>
-          Email Id:          <input type="email" name="email"><br>
-          Website:           <input type="url" name="country"><br>
-          <input type="submit" value"Submit">
-        </form>
-      </section>
+    <ul>
+    <li><a class="active" href="index.html">Home</a></li>
+    <li><a href="study.html">Study</a></li>
+    <li><a href="about.html">About us</a></li>
+    <li><a href="contact.html">Contact us</a></li>
+  </ul>
+</div>
+</header>
+
+
+    <main>
+
     </<main>
 
+
     <footer>
-      <p>All Rights reserved @CULS 2018</p>
+      <p>All Rights Reserved for ramekrish 2018</p>
     </footer>
   </body>
 </html>
