--- a/index.html
+++ b/index.html
@@ -1,36 +1,36 @@
 <!-- Beans, DAOs, Servlet, and one more thing?-->
 <!doctype html>
-
+<html>
 
   <head>
       <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <title> CULS Final Project for Front end - 2018</title>
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
       <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
     <!--Welcome Banner -->
-    <header role="banner" class="welcome-content">
+    <header>
       <h1> Welcome to the Final Project for Frontend </h1>
-
+  </header>
 
   <div class="navigation">
+    <a href="index.html">Home</a>
+    <a href="study.html">Study</a>
+    <a href="about.html">About us</a>
+    <a href="contact.html">Contact us</a>
+  </div>
 
-    <ul>
-    <li><a class="active" href="index.html">Home</a></li>
-    <li><a href="study.html">Study</a></li>
-    <li><a href="about.html">About us</a></li>
-    <li><a href="contact.html">Contact us</a></li>
-  </ul>
+    <div class="main">
+<p>testfdgsfdgsdfg
+sdfhgfsdhfsdh
+fdhsgfdhsh</br>
+drgsdfgdsgdfg
+</p>
+
+<button name="back">back</button>
 </div>
-</header>
-
-
-    <main>
-
-    </<main>
-
 
     <footer>
       <p>All Rights Reserved for ramekrish 2018</p>
