--- a/study.html
+++ b/study.html
@@ -1,13 +1,37 @@
-<!DOCTYPE html>
+<!-- Beans, DAOs, Servlet, and one more thing?-->
+<!doctype html>
 <html>
-<head>
-  
 
+  <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title> CULS Final Project for Front end - 2018</title>
+      <link href="css/styles.css" rel="stylesheet" type="text/css">
+  </head>
 
+  <body>
+    <!--Welcome Banner -->
+    <header>
+      <h1> Welcome to the Final Project for Frontend </h1>
+  </header>
 
+  <div class="navigation">
+    <a href="index.html">Home</a>
+    <a href="study.html">Study</a>
+    <a href="about.html">About us</a>
+    <a href="contact.html">Contact us</a>
+  </div>
 
-<h1>This is a Study Block Page</h1>
-<p>This page contains information about our Study block..</p>
+    <div class="main">
+<p>studysfdgfsdgfsdgsfdgdf
+studysfdgfsdgfsdgsfdgdfsfgfsdgfdg</br>
+argfdsgfsdgsfdg</br>
+fdgfdsgdfg</br></p>
+<button name="back" onclick="" >back</button>
+</div>
 
-</body>
+    <footer>
+      <p>All Rights Reserved for ramekrish 2018</p>
+    </footer>
+  </body>
 </html>
