--- a/about.html
+++ b/about.html
@@ -1,9 +1,36 @@
-<!DOCTYPE html>
+<!-- Beans, DAOs, Servlet, and one more thing?-->
+<!doctype html>
 <html>
-<body>
 
-<h1>This is a personal information page</h1>
-<p>This page contains information about Ramesh and Tomas.</p>
+  <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title> CULS Final Project for Front end - 2018</title>
+      <link href="css/styles.css" rel="stylesheet" type="text/css">
+  </head>
 
-</body>
+  <body>
+    <!--Welcome Banner -->
+    <header>
+      <h1> Welcome to the Final Project for Frontend </h1>
+  </header>
+
+  <div class="navigation">
+    <a href="index.html">Home</a>
+    <a href="study.html">Study</a>
+    <a href="about.html">About us</a>
+    <a href="contact.html">Contact us</a>
+  </div>
+
+    <div class="main">
+<p>About
+fdhsgfdhsh</br>
+drgsdfgdsgdfg
+</p>
+</div>
+
+    <footer>
+      <p>All Rights Reserved for ramekrish 2018</p>
+    </footer>
+  </body>
 </html>
