--- a/study.html
+++ b/study.html
@@ -4,7 +4,7 @@
 
   <head>
       <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title> CULS Final Project for Front end - 2018</title>
       <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
@@ -17,18 +17,17 @@
 
   <div class="navigation">
     <a href="index.html">Home</a>
-    <a href="study.html">Study</a>
+    <a href="study.html" class="active" style="color:white">Study Block</a>
     <a href="about.html">About us</a>
     <a href="contact.html">Contact us</a>
   </div>
 
     <div class="main">
-<p>studysfdgfsdgfsdgsfdgdf
-studysfdgfsdgfsdgsfdgdfsfgfsdgfdg</br>
-argfdsgfsdgsfdg</br>
-fdgfdsgdfg</br></p>
-<button name="back" onclick="" >back</button>
-</div>
+      <h2 style="text-align:center;font-size:150%">This is the page which has the information about our study block for frontend<h2>
+        <p><a href="https://github.com/pepe/culs-frontend-2018" target="_blank">
+          <small>This is the link where you can find the materials of the StudyBlock from Pepe</small></a></br>
+        </p>
+    </div>
 
     <footer>
       <p>All Rights Reserved for ramekrish 2018</p>
