--- a/contact.html
+++ b/contact.html
@@ -17,19 +17,26 @@
 
   <div class="navigation">
     <a href="index.html">Home</a>
-    <a href="study.html">Study</a>
+    <a href="study.html">Study Block</a>
     <a href="about.html">About us</a>
-    <a href="contact.html">Contact us</a>
+    <a href="contact.html" class="active" style="color:white">Contact us</a>
   </div>
-<button name="back" text="back" bgcolor="black">
 
-</button>
+
+
+
+
     <div class="main">
-<p>contact
-fdhsgfdhsh</br>
-drgsdfgdsgdfg
-</p>
-</div>
+
+      <p>Ramesh: <a href="https://www.linkedin.com/in/ramesh-krishnan-g-57083819/" target="_blank">Linkedin</a>
+      <p>Tomas: <a href=""/a>
+    </div>
+
+    <div>
+      <a href="https://www.czu.cz/en/" target="_blank">
+        <img src="images/czu.gif" style="height:128px;width:256px;">
+      </a>
+    </div>
 
     <footer>
       <p>All Rights Reserved for ramekrish 2018</p>
