--- a/index.html
+++ b/index.html
@@ -12,28 +12,31 @@
   <body>
     <!--Welcome Banner -->
     <header>
-      <h1> Welcome to the Final Project for Frontend </h1>
-  </header>
+        <h1> Welcome to the Final Project for Frontend </h1>
+    </header>
 
   <div class="navigation">
-    <a href="index.html">Home</a>
-    <a href="study.html">Study</a>
+    <a href="index.html" class="active" style="color:white;">Home</a>
+    <a href="study.html">Study Block</a>
     <a href="about.html">About us</a>
     <a href="contact.html">Contact us</a>
   </div>
 
     <div class="main">
-<p>testfdgsfdgsdfg
-sdfhgfsdhfsdh
-fdhsgfdhsh</br>
-drgsdfgdsgdfg
-</p>
+      <h2 style="text-align:center;">Hello welcome to our webpage</h2>
+      <h3>This is the Final project webpage for the Frontend Study Block.</br></h3>
 
-<button name="back">back</button>
+  <p>Team Members:
+  <ol>
+    <li><i><a = href="about.html"> Ramesh Krishnan Gurusamy</a></i></li>
+    <li><i><a = href="about.html">Tomáš Kapitán Koráb<a></i></li>
+  </ol>
+
+
 </div>
 
     <footer>
-      <p>All Rights Reserved for ramekrish 2018</p>
+      <p>All Rights Reserved for ramekrish @CULS-2018</p>
     </footer>
   </body>
 </html>
