--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 
       <div style="float:left; width:250px;">
         <p style="font-size:25px">My name is Tomáš Kapitán Koráb<br>I am studying in Czech University of Life Sciences.<br>
-                              I am working as a.<br>
+                              I am working as .<br>
                               I am from Praha.<br>
         <img src="images/rame.jpg", style="width:128px; height:256px;">
     </div>
