--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@
     <h2 style="text-align:center, color:black;">This page has the information about our Team Members</h2>
   </div>
 
-    <div class="main-about" style="width:500px;">
-      <div style="float:left; width:250px;">
+    <div class="main-about" style="width:100%;">
+      <div style="float:left; width:50%;">
         <p style="font-size:25px">My name is Ramesh Krishnan<br>I am studying in Czech University of Life Sciences.<br>
                               I am working as a Network Analyst in MNOC.<br>
                               I am from Chennai, India.<br>
